<?xml version="1.0" encoding="utf-8"?>
<resources>
	<!-- ui_learn_ar strings -->

	<string name="app_name">Page 1</string>
	<string name="ek_img_content">ExportKit Image</string>
	<string name="text_string">Sign in</string>
	<string name="placeholder_string">Email</string>
	<string name="placeholder_ek1_string">Password</string>
	<string name="button_string">Forgot Password?</string>
	<string name="text_ek1_string">Log in</string>
	<string name="button_ek1_string">Sign up</string>
	<string name="text_ek2_string">Sign up</string>
	<string name="placeholder_ek2_string">Name</string>
	<string name="placeholder_ek3_string">E-mail</string>
	<string name="placeholder_ek4_string">Password</string>
	<string name="text_ek3_string">Sign up</string>
	<string name="button_ek2_string">Log in</string>
</resources>