<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent" android:layout_height="wrap_content" >
	<!-- 
	/*
	 *	This content is generated from the API File Info.
	 *	(Alt+Shift+Ctrl+I).
	 *
	 *	@desc 		
	 *	@file 		ui_learn_ar
	 *	@date 		1619185651175
	 *	@title 		Page 1
	 *	@author 	
	 *	@keywords 	
	 *	@generator 	Export Kit v1.3.figma
	 *
	 */
	-->
	<ScrollView android:id="@+id/sign_up" 
		android:layout_width="wrap_content" 
		android:layout_height="match_parent" >

		<RelativeLayout android:id="@+id/content_container" 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content" >



			<RelativeLayout android:id="@+id/page_sign_up_ek2"
				android:layout_marginTop="0dp"
				android:layout_marginStart="0dp"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				>

				<View android:id="@+id/_bg__sign_up_ek3"
					android:background="@drawable/_bg__sign_up_ek3_shape"
					 android:layout_marginStart="0dp"
					android:layout_marginTop="0dp"
					android:layout_width="385dp"
					android:layout_height="812dp" />


				<RelativeLayout android:id="@+id/content_ek1"
					android:layout_marginTop="191dp"
					android:layout_marginStart="5dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					>


					<RelativeLayout android:id="@+id/sign_up_ek4"
						android:layout_marginTop="0dp"
						android:layout_marginStart="16dp"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						>


						<RelativeLayout android:id="@+id/text_content_ek2"
							android:layout_marginTop="0dp"
							android:layout_marginStart="0dp"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							>


							<RelativeLayout android:id="@+id/title_ek1"
								android:layout_marginTop="0dp"
								android:layout_marginStart="0dp"
								android:layout_width="wrap_content"
								android:layout_height="wrap_content"
								>

								<TextView android:id="@+id/text_ek2"
									android:fontFamily="Rubik"
									android:layout_gravity="center_horizontal|center"
									android:gravity="center"
									android:textSize="24sp"
									android:textColor="@color/text_color"
									android:layout_marginLeft="-4dp"
									android:layout_marginTop="0dp"
									android:layout_width="353dp"
									android:layout_height="49dp"
									android:text="@string/text_ek2_string"
									 />

							</RelativeLayout>

						</RelativeLayout>

					</RelativeLayout>


					<RelativeLayout android:id="@+id/form_ek1"
						android:layout_marginTop="53dp"
						android:layout_marginStart="16dp"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						>


						<RelativeLayout android:id="@+id/name"
							android:layout_marginTop="0dp"
							android:layout_marginStart="0dp"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							>

							<TextView android:id="@+id/placeholder_ek2"
								android:fontFamily="Rubik"
								android:textSize="14sp"
								android:textColor="@color/placeholder_color"
								android:layout_marginLeft="16dp"
								android:layout_marginTop="16dp"
								android:layout_width="318dp"
								android:layout_height="31dp"
								android:text="@string/placeholder_ek2_string"
								 />

						</RelativeLayout>


						<RelativeLayout android:id="@+id/email_ek1"
							android:layout_marginTop="69dp"
							android:layout_marginStart="0dp"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							>

							<TextView android:id="@+id/placeholder_ek3"
								android:fontFamily="Rubik"
								android:textSize="14sp"
								android:textColor="@color/placeholder_color"
								android:layout_marginLeft="16dp"
								android:layout_marginTop="16dp"
								android:layout_width="318dp"
								android:layout_height="31dp"
								android:text="@string/placeholder_ek3_string"
								 />

						</RelativeLayout>


						<RelativeLayout android:id="@+id/password_"
							android:layout_marginTop="138dp"
							android:layout_marginStart="0dp"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							>

							<TextView android:id="@+id/placeholder_ek4"
								android:fontFamily="Rubik"
								android:textSize="14sp"
								android:textColor="@color/placeholder_color"
								android:layout_marginLeft="16dp"
								android:layout_marginTop="16dp"
								android:layout_width="71dp"
								android:layout_height="31dp"
								android:text="@string/placeholder_ek4_string"
								 />


							<RelativeLayout android:id="@+id/password_icons_ek1"
								android:layout_marginTop="14.5dp"
								android:layout_marginStart="303dp"
								android:layout_width="wrap_content"
								android:layout_height="wrap_content"
								>


								<RelativeLayout android:id="@+id/visibility_1_ek1"
									android:layout_marginTop="0dp"
									android:layout_marginStart="0dp"
									android:layout_width="wrap_content"
									android:layout_height="wrap_content"
									>


									<RelativeLayout android:id="@+id/group_ek8"
										android:layout_marginTop="9.03dp"
										android:layout_marginStart="9.03dp"
										android:layout_width="wrap_content"
										android:layout_height="wrap_content"
										>


										<RelativeLayout android:id="@+id/group_ek9"
											android:layout_marginTop="0dp"
											android:layout_marginStart="0dp"
											android:layout_width="wrap_content"
											android:layout_height="wrap_content"
											>

											<ImageView android:id="@+id/vector_ek4"
												android:src="@drawable/vector_ek4"
												android:contentDescription="vector_ek4"
												 android:layout_marginStart="0dp"
												android:layout_marginTop="0dp"
												android:layout_width="6.97dp"
												android:layout_height="6.97dp" />

										</RelativeLayout>

									</RelativeLayout>


									<RelativeLayout android:id="@+id/group_ek10"
										android:layout_marginTop="8dp"
										android:layout_marginStart="8dp"
										android:layout_width="wrap_content"
										android:layout_height="wrap_content"
										>


										<RelativeLayout android:id="@+id/group_ek11"
											android:layout_marginTop="0dp"
											android:layout_marginStart="0dp"
											android:layout_width="wrap_content"
											android:layout_height="wrap_content"
											>

											<ImageView android:id="@+id/vector_ek5"
												android:src="@drawable/vector_ek5"
												android:contentDescription="vector_ek5"
												 android:layout_marginStart="0dp"
												android:layout_marginTop="0dp"
												android:layout_width="5.11dp"
												android:layout_height="5.11dp" />

										</RelativeLayout>

									</RelativeLayout>


									<RelativeLayout android:id="@+id/group_ek12"
										android:layout_marginTop="6.4dp"
										android:layout_marginStart="6.25dp"
										android:layout_width="wrap_content"
										android:layout_height="wrap_content"
										>


										<RelativeLayout android:id="@+id/group_ek13"
											android:layout_marginTop="0dp"
											android:layout_marginStart="0dp"
											android:layout_width="wrap_content"
											android:layout_height="wrap_content"
											>

											<ImageView android:id="@+id/vector_ek6"
												android:src="@drawable/vector_ek6"
												android:contentDescription="vector_ek6"
												 android:layout_marginStart="0dp"
												android:layout_marginTop="0dp"
												android:layout_width="17.75dp"
												android:layout_height="12.6dp" />

										</RelativeLayout>

									</RelativeLayout>


									<RelativeLayout android:id="@+id/group_ek14"
										android:layout_marginTop="5dp"
										android:layout_marginStart="0dp"
										android:layout_width="wrap_content"
										android:layout_height="wrap_content"
										>


										<RelativeLayout android:id="@+id/group_ek15"
											android:layout_marginTop="0dp"
											android:layout_marginStart="0dp"
											android:layout_width="wrap_content"
											android:layout_height="wrap_content"
											>

											<ImageView android:id="@+id/vector_ek7"
												android:src="@drawable/vector_ek7"
												android:contentDescription="vector_ek7"
												 android:layout_marginStart="0dp"
												android:layout_marginTop="0dp"
												android:layout_width="15.62dp"
												android:layout_height="11.72dp" />

										</RelativeLayout>

									</RelativeLayout>


									<RelativeLayout android:id="@+id/group_ek16"
										android:layout_marginTop="3dp"
										android:layout_marginStart="3dp"
										android:layout_width="wrap_content"
										android:layout_height="wrap_content"
										>


										<RelativeLayout android:id="@+id/group_ek17"
											android:layout_marginTop="0dp"
											android:layout_marginStart="0dp"
											android:layout_width="wrap_content"
											android:layout_height="wrap_content"
											>

											<ImageView android:id="@+id/vector_ek8"
												android:src="@drawable/vector_ek8"
												android:contentDescription="vector_ek8"
												 android:layout_marginStart="0dp"
												android:layout_marginTop="0dp"
												android:layout_width="18dp"
												android:layout_height="18dp" />

										</RelativeLayout>

									</RelativeLayout>

								</RelativeLayout>

							</RelativeLayout>

						</RelativeLayout>


						<RelativeLayout android:id="@+id/sign_up_ek5"
							android:layout_marginTop="207dp"
							android:layout_marginStart="0dp"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							>

							<TextView android:id="@+id/text_ek3"
								android:fontFamily="Rubik"
								android:layout_gravity="center_horizontal|center"
								android:gravity="center"
								android:textSize="16sp"
								android:textColor="@color/_bg__login_ek2_color"
								android:layout_marginLeft="29dp"
								android:layout_marginTop="16dp"
								android:layout_width="287dp"
								android:layout_height="35dp"
								android:text="@string/text_ek3_string"
								 />

						</RelativeLayout>


						<RelativeLayout android:id="@+id/log_in_ek1"
							android:layout_marginTop="279dp"
							android:layout_marginStart="135dp"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							>

							<TextView android:id="@+id/button_ek2"
								android:fontFamily="Rubik"
								android:layout_gravity="center_horizontal|center"
								android:gravity="center"
								android:textSize="14sp"
								android:textColor="@color/placeholder_color"
								android:layout_marginLeft="14dp"
								android:layout_marginTop="0dp"
								android:layout_width="48dp"
								android:layout_height="26dp"
								android:text="@string/button_ek2_string"
								 />

						</RelativeLayout>

					</RelativeLayout>

				</RelativeLayout>

			</RelativeLayout>
		</RelativeLayout>

	</ScrollView>
</HorizontalScrollView>